--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-image: url("bg.gif");
     color: white;
 }
 marquee{
@@ -10,4 +10,10 @@ marquee{
 }
 p{
     font-size: 18px;
+}
+a:link{
+    color: peachpuff;
+}
+a:visited{
+    color: rosybrown;
 }
